fixing sendBtn on mobile

--- a/src/components/MessageForm/MessageForm.module.css
+++ b/src/components/MessageForm/MessageForm.module.css
@@ -69,6 +69,10 @@
     display: block;
     margin: 0 auto;
   }
+  .sendImg {
+    width: 20px;
+    height: 20px;
+  }
   .messageInput {
     padding: 4px 20px;
   }
